--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:background="@color/teal_200"
+        android:background="@color/grayLight"
         android:iconifiedByDefault="false"
         android:queryHint="@string/search_hint"
         app:layout_constraintEnd_toEndOf="parent"
