--- a/app/src/main/res/layout/fragment_repositories.xml
+++ b/app/src/main/res/layout/fragment_repositories.xml
@@ -20,6 +20,8 @@
         android:id="@+id/repositoriesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         tools:listitem="@layout/repository_info_item"
         tools:itemCount="10"/>
 
