--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_menu_search_24"
-        android:title="@string/title_search" />
+        android:title="@string/title_search_profile" />
 
     <item
         android:id="@+id/navigation_profile"
